# grpc

./: .bazelrc  .gitignore  ANALYSIS_SUMMARY.md  ARENA_DETECTION_GUIDE.md  BENCHMARK_GUIDE.md  BUILD  CMakeLists.txt  Dockerfile.test  Dockerfile.test-simple  INTEGRATION_SUMMARY.md  MODULE.bazel  Makefile  OFFICIAL_BENCHMARK_GUIDE.md  RUST_INTEGRATION.md  SCRIPT_PURPOSE.md  WHERE_IS_THE_LEAK.md  WORKSPACE  analyze_channel_leak.py  benchmark_rust_vs_cython.py  build_grpc.py  build_handwritten.yaml  client_fast_path_plan.md  config.m4  debug_memory_leak.py  debug_with_mtrace.sh  debug_with_valgrind.sh  demo_rust_integration.py  detect_arena_leak.py  detect_leaking_objects.py  detect_thread_arenas.py  docker-compose.test.yml  find_channel_references.py  gRPC-C++.podspec  gRPC-Core.podspec  grpc-cython.md  grpc_cython.md  grpcio_native_defense_and_benefits.md  package.xml  pyproject.toml  pyrightconfig.json  (+16 more)
bazel/: _logging_threshold_test_main.py  _run_time_type_check_main.py  cython_library.bzl  experiments.bzl  grpc_python_deps.bzl  rust_library.bzl
coroutine_benchmarks/: PERFORMANCE_COMPARISON.md  README.md  benchmark_concurrency.sh  create_comparison_table.sh  profile_and_optimize.sh  run_quick_bench.sh
doc/python/: pep684_multi_interpreter_design.md
src/compiler/: python_generator.cc
src/core/: BUILD
src/core/lib/experiments/: experiments.cc  experiments.h  experiments.yaml  rollouts.yaml
src/core/lib/iomgr/: fork_posix.cc
src/core/lib/resource_quota/: arena.cc
src/core/lib/surface/: channel.cc  channel.h  completion_queue.cc  init.cc  init_upb_msvc.c
src/core/server/: method_lookup.h  server.cc  server.h
src/core/util/: fork.cc  thread_arena_tracker.h  thread_memory_cleanup.cc  thread_memory_cleanup.h
src/core/util/posix/: thd.cc
src/objective-c/tests/: version.h
src/python/grpc_cython/: setup.py
src/python/grpc_cython/grpc_cython/: __init__.py  _handler.py  plugin.py
src/python/grpcio/: _spawn_patch.py  commands.py  grpc_core_dependencies.py  grpc_version.py
src/python/grpcio/grpc/: BUILD.bazel  __init__.py  _channel.py  _common.py  _compression.py  _feature_flags.py  _grpcio_metadata.py  _interceptor.py  _observability.py  _plugin_wrapping.py  _server.py  _subinterpreter_pool.py  _typing.py
src/python/grpcio/grpc/_rust/: BUILD.bazel  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  benchmark_worker.py  build.rs  build.sh  example_usage.py  grpc_rust_bindings.py  grpc_rust_bindings_stub.py  libgrpc_rust_bindings.d  libgrpc_rust_bindings.dylib  rust_builder.py  setup.py  test_rust_bindings.py
src/python/grpcio/grpc/_rust/src/: aio.rs  call.rs  channel.rs  completion_queue.rs  credentials.rs  lib.rs  metadata.rs  server.rs  status.rs
src/python/grpcio_admin/: setup.py
src/python/grpcio_channelz/: setup.py
src/python/grpcio_csds/: setup.py
src/python/grpcio_csm_observability/: setup.py
src/python/grpcio_cython/: README.md  setup.py
src/python/grpcio_cython/grpcio_cython/: __init__.py  _abi.py  _compiler.py  _handler.py
src/python/grpcio_cython/tests/: benchmark.py  test_native_handler.py
src/python/grpcio_health_checking/: setup.py
src/python/grpcio_native/: README.md  setup.py
src/python/grpcio_native/examples/echo_pybind11/: CMakeLists.txt  echo.proto  echo_client.py  echo_handler.cc  echo_server.py
src/python/grpcio_native/grpcio_native/: __init__.py  _abi.py  _compiler.py  _handler.py
src/python/grpcio_native/tests/: benchmark.py  test_native_handler.py
src/python/grpcio_observability/: setup.py
src/python/grpcio_observability/grpc_observability/: _open_telemetry_observability.py  _open_telemetry_plugin.py
src/python/grpcio_reflection/: setup.py
src/python/grpcio_status/: setup.py
src/python/grpcio_testing/: setup.py
src/python/grpcio_tests/: setup.py
src/python/grpcio_tests/tests/: __init__.py  _result.py
templates/: MODULE.bazel.inja
templates/tools/dockerfile/: gcp_api_libraries.include  run_tests_python_deps.include  run_tests_python_deps_pep668.include
test/core/server/: bm_server_registered_method.cc  bucketed_hash_lookup.h
test/core/server/bm_isolation/: BUILD  absl_test.cc  bucketed_hash_lookup.h  simple_bm  (+2 more)
test/cpp/qps/: BUILD  COROUTINE_ARCHITECTURE_ISSUE.md  client_coroutine.cc  client_coroutine.h  client_coroutine_sync.cc  inproc_sync_unary_ping_pong_test.cc  qps_worker.cc
tools/: bazel.rc
tools/bazelify_tests/: dockerimage_current_versions.bzl
tools/codegen/core/: experiments_compiler.py
tools/distrib/: check_copyright.py  ruff_code.sh
tools/distrib/python/: make_grpcio_tools.py
tools/dockerfile/: grpc_artifact_python_manylinux2014_x64.current_version  grpc_artifact_python_manylinux2014_x86.current_version  grpc_artifact_python_musllinux_1_2_x64.current_version  grpc_artifact_python_musllinux_1_2_x86.current_version
tools/dockerfile/interoptest/: grpc_interop_cxx.current_version  grpc_interop_go1.16.current_version  grpc_interop_go1.19.current_version  grpc_interop_node.current_version  grpc_interop_php7.current_version  grpc_interop_ruby.current_version
tools/dockerfile/test/: android_ndk.current_version  bazel_arm64.current_version  csharp_debian11_arm64.current_version  csharp_debian11_x64.current_version  cxx_clang_19_x64.current_version  cxx_debian11_openssl102_x64.current_version  cxx_debian11_openssl111_x64.current_version  cxx_debian11_x64.current_version  cxx_debian11_x86.current_version  cxx_debian12_openssl309_x64.current_version  cxx_gcc_14_x64.current_version  php8_debian12_arm64.current_version  php8_debian12_x64.current_version  php8_zts_debian12_x64.current_version  python_debian11_default_arm64.current_version  python_debian11_default_x64.current_version  rbe_ubuntu2004.current_version  ruby_debian11_arm64.current_version  ruby_debian11_x64.current_version
tools/doxygen/: Doxyfile.c++.internal
tools/internal_ci/macos/: grpc_python_bazel_test.sh
tools/run_tests/artifacts/: artifact_targets.py  distribtest_targets.py
tools/run_tests/performance/: run_worker_python_asyncio_rust.sh  run_worker_python_rust.sh  run_worker_rust.sh
(+278 files in other folders)
