[package]
name = "grpc-rust-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "grpc_rust_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
grpcio = "0.13"
grpcio-sys = "0.13"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] } 