[package]
name = "grpc-rust-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "grpc_rust_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[build-dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-build-config = "0.25" 